fix(component): fix subtext overflow problem in the ContainerItem
affects: @atlaskit/navigation

ISSUES CLOSED: AK-2149

--- a/packages/navigation/src/components/less/NavigationItem.less
+++ b/packages/navigation/src/components/less/NavigationItem.less
@@ -125,7 +125,7 @@
 .subText {
   color: @ak-color-N90;
   font-size: @sub-text-size;
-  overflow-x: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
